show profile relations and inherited positions
